@@ -1,2 +1,1 @@
-DIST django-filter-0.11.0.tar.gz 203673 SHA256 7d17547b65216cc5c6fbc04aee55088ccd5917c0775304d96f7017c26c789cd7 SHA512 fcdb36c94e9f88a1c2d32ecbe1107b5306d0fffe65baa874c5d43dbe6ba84e947c6f8c002e5e64a750f5f3ab0753420bca5ab6c7246871626001882542042aa9 WHIRLPOOL 6f262342b76ede60bd8225f20297bb2407f47e7066243b9a29b5f9b2119d860e8a6f857adb42f2060b39a6ec97253a57ddd7c79aa2ae04142347f499b1b62738
 DIST django-filter-0.12.0.tar.gz 48395 SHA256 a1b03aa17e840af598ffbe872111011eb03b936ce34b0b9de85b4e493a55cd92 SHA512 0cc5787347443431b6c78fa9bd23beecb181a5cccd835613f35a64e31b03af17ec012148d62834bbab774980af8712a2ad9e7097a627bb6deb771dd8fc880c45 WHIRLPOOL 68542f12692af283bb973faa557221cc7138af8b42a967cc0557e87f9bdd4aed636b70fa5c52ed51673a2c832b9e4f693c309cacb5c29c3fb318c8e0b0d0d499
