@@ -2,6 +2,9 @@
 # Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  13 Feb 2016; Johann Schmitz <ercpe@gentoo.org> -django-filter-0.11.0.ebuild:
+  dev-python/django-filter: Dropped old
+
 *django-filter-0.12.0 (09 Jan 2016)
 
   09 Jan 2016; Johann Schmitz <ercpe@gentoo.org> +django-filter-0.12.0.ebuild,
